# dissertation

./: .gitignore  README.md  apiConfig.json  pyproject.toml
apiIntegrations/: ga.py  scopus.py  utilities.py
networking/: classes.py  plotting.py  utilities.py
notebooks/: TF01_Initial_Exploration.ipynb  TF03_NetworkX_Tutorial.ipynb  TF06_JA.ipynb
scripts/: downloadIndividualGA.py  downloadRelevantSummaries.py  downloadRequestGA.py
tests/: test_topic_modelling.py
topicmodelling/: classes.py  lda.py  utilties.py
topicmodelling/utilities/: clean.py  cleaning.py  evaluating.py  plotting.py
