[tool.poetry]
name = "marketmodel"
version = "0.1.0"
description = "A novel combination of topic modelling, network theory and machine learning to predict the evolution of emerging markets."
authors = ["Tbs_Fchnr <tobias.fechner@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.1.0"
requests-oauthlib = "^1.3.0"
pandas = "^1.2.3"
pybliometrics = "^2.9.1"
jupyter = "^1.0.0"
tqdm = "^4.59.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
Pint = "^0.16.1"
nltk = "^3.5"
scikit-learn = "^0.24.1"
gensim = "^3.8.3"
spacy = "^3.0.5"
networkx = "^2.5"
pyLDAvis = "^3.3.1"
plotly = "^4.14.3"
tomotopy = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
